<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".GeofenceActivity">

    <!-- OpenStreetMap View -->
    <org.osmdroid.views.MapView
        android:id="@+id/osmMapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/map_view_description" />

    <!-- Geo-fence status text -->
    <TextView
        android:id="@+id/geoFenceStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geo_checking"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="center"
        android:contentDescription="@string/geo_status_description"/>

    <!-- Distance to geo-fenced area -->
    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:gravity="center"
        android:contentDescription="@string/distance_description"/>

    <!-- Refresh Button -->
    <Button
        android:id="@+id/refreshLocationButton"
        android:layout_width="wrap_content"
        android:fontFamily="@font/pixel_font"
        android:layout_height="56dp"
        android:text="@string/refresh_location"
        android:textColor="@color/white"
        android:background="@drawable/neon_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin="16dp"
        android:paddingHorizontal="24dp"
        android:contentDescription="@string/refresh_button"/>

</LinearLayout>
