<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan_transparent"
    android:padding="16dp">

    <!-- 🔥 Glowing Pixel Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo_glowy"
        android:elevation="6dp"
        android:contentDescription="@string/logo" />

    <!-- ✉️ Email Input -->
    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_input_field"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        android:elevation="3dp"
        android:fontFamily="@font/lato_italic"
        /> <!-- ✅ More responsive -->


    <!-- 🔒 Password Input -->
    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@drawable/rounded_input_field"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:elevation="3dp"
        android:fontFamily="@font/lato_italic" />

    <!-- 🔵 Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:layout_marginTop="25dp"
        android:text="@string/Login"
        style="@style/CustomButtonStyle" />


    <!-- ⚪ Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:text="@string/register"
        style="@style/CustomButtonStyle" />

</RelativeLayout>
